# jsfiddle-generator.py

./: README.md  requirements.txt  setup.cfg  setup.py
jsfiddle_generator/: __init__.py  __main__.py  gist.py  repo.py
jsfiddle_generator/yaml/: __init__.py
tests/jsfiddle-generator/examples/: cli.sh  jsfiddle_generator.gist.sh  jsfiddle_generator.repo.sh
