# https://pypi.org/project/setupcfg-generator/
[metadata]
name = jsfiddle-generator
version = 2019.4.12
url = https://github.com/looking-for-a-job/jsfiddle-generator.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = jsfiddle

[options]
install_requires = 
	PyYAML
	click
	public
	setuptools
packages = 
	jsfiddle_generator
